--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1 class="text-3xl font-bold underline">Fitness Forcast</h1>
-        <nav class ="flex items-center justify-center flex-wrap bg-blue-600 p-6">
+      <nav class ="flex items-center justify-center flex-wrap bg-blue-600 p-6">
           <ul cass = "flex border-b">
             <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Home</li>
             <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">About</li>
@@ -28,7 +28,7 @@
         <div class="container bg-blue-500 w-150 h-72"></div>
           <h2>Main Day Weather</h2>
       </section>
-      <div class = "grid grid-rows-3 grid-flow-col gap-4 space-y-4 flex flex-wrap text-white text-sm text-center place-items-center">
+      <div class = "grid grid-rows-3 grid-flow-col gap-4 space-y-4 flex-wrap text-white text-sm text-center place-items-center">
         <section class="Previous Workouts">
           <div class="container bg-blue-500 w-52 h-52 pt-5 pb-5"></div>
             <h2>Previous Workouts</h2>
@@ -61,8 +61,9 @@
         </section>
       </div>
     </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/script.js"></script>
     <footer>
-
     </footer>
   </body>
 </html>
