--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1 class="text-3xl font-bold underline">Fitness Forcast</h1>
+      <h1 class="text-3xl font-bold underline">Fitness Forecast</h1>
       <nav class ="flex items-center justify-center flex-wrap bg-blue-600 p-6">
           <ul cass = "flex border-b">
             <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Home</li>
@@ -30,11 +30,22 @@
         <div class="container bg-blue-500 w-150 h-72"></div>
           <h2>Main Day Weather</h2>
       </section>
+      <section class="Sidecard Item 1">
+        <div class="container align-left bg-blue-500 w-52 h-52"></div>
+          <h2>Weather Forecast</h2>
+        <div class="container"></div>
+      </section>
+      <section class="Sidecard Item ">
+        <div class="container align-left bg-blue-500 w-52 h-52"></div>
+          <h2>Weather Forecast</h2>
+        <div class="container"></div>
+      </section>
       <div class = "grid grid-rows-3 grid-flow-col gap-4 space-y-4 flex-wrap text-white text-sm text-center place-items-center">
         <section class="Previous Workouts">
           <div class="container bg-blue-500 w-52 h-52 pt-5 pb-5"></div>
             <h2>Previous Workouts</h2>
             <div class="container"></div>
+          <div>slim shady</div>
         </section>
         <section class="Weather Forecast Box">
           <div class="container bg-blue-500 w-52 h-52"></div>
