--- a/index.html
+++ b/index.html
@@ -10,67 +10,69 @@
   </head>
   <body>
     <header>
-      <h1 class="text-3xl font-bold underline">Fitness Forecast</h1>
       <nav class ="flex items-center justify-center flex-wrap bg-blue-600 p-6">
+        <h1 class="text-left text-3xl font-bold text-white pr-10">Fitness Forecast</h1>
           <ul cass = "flex border-b">
-            <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Home</li>
-            <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">About</li>
-            <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Contact Us</li>
-            <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Weather</li>  
-            <li class = "bg-blue-500 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Workouts</li>                  
+            <li class = "bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Home</li>
+            <li class = "bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">About</li>
+            <li class = "bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Contact Us</li>
+            <li class = "bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Weather</li>  
+            <li class = "bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold" href="#">Workouts</li>
           </ul>
         </nav>
     </header>
-    <main class = "container mx-auto">
-      <section class="Intro Paragraph p-10 font-semibold">
-          <h2>Welcome To Fitness Forecast</h2>
-          <p>Hello all fitness fanatics! Never play the guessing game between weather and outdoor fitness again! Whether it's indoor or outdoor, maybe there's certain activites you want to do, but you're not sure exactly what! Welcome to Fitness Forecast where we can guide you to feaured workouts during the week with weather in mind!</p>
+        <img class="object-cover h-full min-w-full
+          alt= gut running outside
+          class="object-cover h-full min-w-full
+          src="./assets/Running Outside Banner.png"
+      />
+    <main class = "container mx-auto px-40">
+      <section class="Today's Weather pt-10 pb-10">
+        <div class="container bg-blue-600 w-50 h-72 text-white text-center place-items-center text-2xl align-items: center;"><h2>Today's Weather</h2></div>
       </section>
-      <section class="Main Day Weather Box pb-10">
-        <div class="container bg-blue-500 w-150 h-72"></div>
-          <h2>Main Day Weather</h2>
-      </section>
-      <section class="Sidecard Item 1">
-        <div class="container align-left bg-blue-500 w-52 h-52"></div>
-          <h2>Weather Forecast</h2>
-        <div class="container"></div>
-      </section>
-      <section class="Sidecard Item ">
-        <div class="container align-left bg-blue-500 w-52 h-52"></div>
-          <h2>Weather Forecast</h2>
-        <div class="container"></div>
-      </section>
-      <div class = "grid grid-rows-3 grid-flow-col gap-4 space-y-4 flex-wrap text-white text-sm text-center place-items-center">
+<div class="Search Bar icon">
+  <div class="relative mb-4 flex w-full flex-wrap items-stretch">
+    <input
+      type="search"
+      class="relative m-0 -mr-0.5 block w-[1px] min-w-0 flex-auto rounded-l border border-solid border-neutral-300 bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out focus:z-[3] focus:border-primary focus:text-neutral-700 focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] focus:outline-none dark:border-neutral-600 dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:focus:border-primary"
+      placeholder="Search"
+      aria-label="Search"
+      aria-describedby="button-addon1" />
+    <!--Search icon-->
+    <span
+      class="input-group-text flex items-center whitespace-nowrap rounded px-3 py-1.5 text-center text-base font-normal text-neutral-700 dark:text-neutral-200"
+      id="basic-addon2">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="FFEE74"
+        class="h-5 w-5">
+        <path
+          fill-rule="evenodd"
+          d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
+          clip-rule="evenodd" />
+      </svg>
+    </span>
+  </div>
+</div>
+      <div class = "grid grid-cols-3 grid-flow-row gap-4 flex-wrap text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen">
         <section class="Previous Workouts">
-          <div class="container bg-blue-500 w-52 h-52 pt-5 pb-5"></div>
-            <h2>Previous Workouts</h2>
-            <div class="container"></div>
-          <div>slim shady</div>
+          <div class="container bg-gray-500 w-80 h-60 text-2xl"><h2>Previous Workouts</h2></div>
         </section>
-        <section class="Weather Forecast Box">
-          <div class="container bg-blue-500 w-52 h-52"></div>
-            <h2>Weather Forecast</h2>
-            <div class="container"></div>
+        <section class="Monday Forecast">
+        <div class="container bg-blue-600 w-80 h-60 text-2xl"><h2>Monday Forecast</h2></div>
         </section>
-        <section class="Weather Forecast Box">
-        <div class="container bg-blue-500 w-52 h-52"></div>
-          <h2>Weather Forecast</h2>
-          <div class="container"></div>
+        <section class="Tuesday Forecast">
+        <div class="container bg-blue-600 w-80 h-60 text-2xl"><h2>Tuesday Forecast</h2></div>
         </section>
-        <section class="Weather Forecast Box">
-        <div class="container bg-blue-500 w-52 h-52"></div>
-          <h2>Weather Forecast</h2>
-          <div class="container"></div>
+        <section class="Featured Workouts">
+        <div class="container bg-gray-500 w-80 h-60 text-2xl"><h2>Featured Workouts</h2></div>
         </section>
-        <section class="Weather Forecast Box">
-          <div class="container bg-blue-500 w-52 h-52"></div>
-            <h2>Weather Forecast</h2>
-          <div class="container"></div>
+        <section class="Wednesday Forecast">
+          <div class="container bg-blue-600 w-80 h-60 text-2xl"><h2>Wednesday Forecast</h2></div>
         </section>
-        <section class="Weather Forecast Box">
-          <div class="container bg-blue-500 w-52 h-52"></div>
-            <h2>Weather Forecast</h2>
-          <div class="container"></div>
+        <section class="Thursday Forecast">
+          <div class="container bg-blue-600 w-80 h-60 text-2xl"> <h2>Thursday Forecast</h2></div>
         </section>
       </div>
     </main>
