Added the small forcast cards, need to center image

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </div>
       </div>
       <div
+        id="page-content"
         class="grid grid-cols-3 grid-flow-row gap-4 flex-wrap text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen"
       >
         <section class="Previous Workouts">
@@ -98,29 +99,10 @@
             <h2>Previous Workouts</h2>
           </div>
         </section>
-        <section class="Monday Forecast">
-          <div class="container bg-blue-600 w-80 h-60 text-2xl">
-            <h2>Monday Forecast</h2>
-          </div>
-        </section>
-        <section class="Tuesday Forecast">
-          <div class="container bg-blue-600 w-80 h-60 text-2xl">
-            <h2>Tuesday Forecast</h2>
-          </div>
-        </section>
+
         <section class="Featured Workouts">
           <div class="container bg-gray-500 w-80 h-60 text-2xl">
             <h2>Featured Workouts</h2>
-          </div>
-        </section>
-        <section class="Wednesday Forecast">
-          <div class="container bg-blue-600 w-80 h-60 text-2xl">
-            <h2>Wednesday Forecast</h2>
-          </div>
-        </section>
-        <section class="Thursday Forecast">
-          <div class="container bg-blue-600 w-80 h-60 text-2xl">
-            <h2>Thursday Forecast</h2>
           </div>
         </section>
       </div>
