Figured out how to center icons on all cards

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       src="./assets/Running Outside Banner.png"
     />
     <main class="container mx-auto px-40">
-      <section class="Today's Weather pt-10 pb-10">
+      <section class="Todays-Weather pt-10 pb-10">
         <div
-          class="container bg-blue-600 w-50 h-72 text-white text-center place-items-center text-2xl align-items: center;"
+          class="container justify-center bg-blue-600 w-50 h-72 text-white text-center place-items-center text-2xl align-items: center;"
           id="mainWeatherCard"
         ></div>
       </section>
-      <div class="Search Bar icon">
+      <div class="Search-Bar-icon">
         <div class="relative mb-4 flex w-full flex-wrap items-stretch">
           <input
             type="search"
