started readme and adjusted grid to create new container for previous and featured workouts

--- a/index.html
+++ b/index.html
@@ -90,21 +90,22 @@
           </span>
         </div>
       </div>
-      <div
+      <div class="flex mx-auto gap-4">
+        <div class = "grid grid-cols-1 grid-flow-cols flex-wrap gap-4 flex-wrap text-white text-center content-center place-items-left pt-10 pb-20 mn-h-screen">
+          <section class = "Previous Workouts">
+            <div class="container bg-gray-500 w-80 h-60 text-2xl">
+              <h2>Previous Workouts</h2>
+          </section>
+          <section class = "Featured Workouts">
+            <div class="container bg-gray-500 w-80 h-60 text-2xl">
+              <h2>Featured Workouts</h2>
+          </section>
+        </div>
+        <div
         id="page-content"
-        class="grid grid-cols-3 grid-flow-row gap-4 flex-wrap text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen"
+        class="grid grid-cols-2 grid-flow-row gap-4 flex-wrap text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen"
       >
-        <section class="Previous Workouts">
-          <div class="container bg-gray-500 w-80 h-60 text-2xl">
-            <h2>Previous Workouts</h2>
-          </div>
-        </section>
-
-        <section class="Featured Workouts">
-          <div class="container bg-gray-500 w-80 h-60 text-2xl">
-            <h2>Featured Workouts</h2>
-          </div>
-        </section>
+        </div>
       </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
