--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     />
     <main class="container mx-auto px-40">
       <div class="flex mx-auto gap-4">
-        <div class="grid grid-cols-2 grid-flow-row gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen">
+        <div class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen">
           <section class="Todays-Weather pt-10 pb-10">
             <div class="bg-blue-600 w-80 h-60 text-2xl"
               id="mainWeatherCard">
@@ -103,7 +103,7 @@
         </div>
       </div>
       <div class="flex mx-auto gap-4">
-        <div class = "grid grid-cols-1 grid-flow-cols flex-wrap gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-left pt-10 pb-20 mn-h-screen">
+        <div class = "grid md:grid-cols-1 grid-flow-cols flex-wrap gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-left pt-10 pb-20">
           <section class = "Previous Workouts">
             <div class="container bg-gray-500 w-80 h-60 text-2xl">
               <h2>Previous Workouts</h2>
@@ -113,10 +113,8 @@
               <h2>Featured Workouts</h2>
           </section>
         </div>
-        <div
-        id="page-content"
-        class="grid grid-cols-2 grid-flow-row gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen"
-      >
+        <div class="grid md:grid-cols-2 grid-flow-cols gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-center pt-10 pb-20"
+        id="page-content">
         </div>
       </div>
     </main>
