--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       src="./assets/Running Outside Banner.png"
     />
     <main class="container mx-auto px-40">
-      <div class="flex mx-auto gap-4">
-        <div class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-center pt-10 pb-20 mn-h-screen">
+      <div class="flex mx-auto gap-4 justify-center">
+        <div class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap justify-center text-white text-center place-items-center pt-10 pb-20 mn-h-screen">
           <section class="Todays-Weather pt-10 pb-10">
             <div class="bg-blue-600 w-80 h-60 text-2xl"
               id="mainWeatherCard">
@@ -102,8 +102,7 @@
           </span>
         </div>
       </div>
-      <div class="flex mx-auto gap-4">
-        <div class = "grid md:grid-cols-1 grid-flow-cols flex-wrap gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-left pt-10 pb-20">
+        <div class = "flex mx-auto gap-4 justify-center grid md:grid-cols-1 grid-flow-cols flex-wrap gap-4 flex-wrap mx-auto text-white text-center place-items-left pt-10 pb-20">
           <section class = "Previous Workouts">
             <div class="container bg-gray-500 w-80 h-60 text-2xl">
               <h2>Previous Workouts</h2>
@@ -112,11 +111,10 @@
             <div class="container bg-gray-500 w-80 h-60 text-2xl">
               <h2>Featured Workouts</h2>
           </section>
+          <div class="grid md:grid-cols-2 grid-flow-cols gap-4 flex-wrap mx-auto text-white text-center place-items-center pt-10 pb-20"
+            id="page-content">
+          </div>
         </div>
-        <div class="grid md:grid-cols-2 grid-flow-cols gap-4 flex-wrap mx-auto justify-content-center text-white text-center content-center place-items-center pt-10 pb-20"
-        id="page-content">
-        </div>
-      </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="assets/js/script.js"></script>
