--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <header>
-      <nav class="flex items-center justify-center flex-wrap bg-blue-600 p-6">
+    <header class="sticky top-0 z-30">
+      <nav class="sticky tp-0 flex items-center justify-center flex-wrap bg-blue-600 p-6">
         <h1 class="text-left text-3xl font-bold text-white pr-10">
           Fitness Forecast
         </h1>
@@ -19,18 +19,6 @@
             href="#"
           >
             Home
-          </li>
-          <li
-            class="bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold"
-            href="#"
-          >
-            About
-          </li>
-          <li
-            class="bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold"
-            href="#"
-          >
-            Contact Us
           </li>
           <li
             class="bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold"
