--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" href="Assets/FF Icon.png" />
   </head>
   <body>
     <header class="sticky top-0 z-30">
-      <nav class="sticky tp-0 flex items-center justify-center flex-wrap bg-blue-600 p-6">
+      <nav
+        class="sticky tp-0 flex items-center justify-center flex-wrap bg-blue-600 p-6"
+      >
         <h1 class="text-left text-3xl font-bold text-white pr-10">
           Fitness Forecast
         </h1>
@@ -44,22 +47,22 @@
     />
     <main class="container mx-auto px-40">
       <div class="flex mx-auto gap-4 justify-center">
-        <div class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap justify-center text-white text-center place-items-center pt-10 pb-20 mn-h-screen">
+        <div
+          class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap justify-center text-white text-center place-items-center pt-10 pb-20 mn-h-screen"
+        >
           <section class="Todays-Weather pt-10 pb-10">
-            <div class="bg-blue-600 w-80 h-60 text-2xl"
-              id="mainWeatherCard">
+            <div class="bg-blue-600 w-80 h-60 text-2xl" id="mainWeatherCard">
               <h2>Today's Weather</h2>
             </div>
           </section>
           <section class="Todays-Workout pt-10 pb-10">
-            <div class="bg-blue-600 w-80 h-60 text-2xl"
-              id="mainWorkoutCard">
+            <div class="bg-blue-600 w-80 h-60 text-2xl" id="mainWorkoutCard">
               <h2>Today's Workouts</h2>
             </div>
           </section>
         </div>
       </div>
-      
+
       <div class="Search-Bar-icon">
         <div class="relative mb-4 flex w-full flex-wrap items-stretch">
           <input
@@ -90,19 +93,19 @@
           </span>
         </div>
       </div>
-        <div class = "flex mx-auto gap-4 justify-center grid md:grid-cols-1 grid-flow-cols flex-wrap gap-4 flex-wrap mx-auto text-white text-center place-items-left pt-10 pb-20">
-          <section class = "Previous Workouts">
-            <div class="container bg-gray-500 w-80 h-60 text-2xl">
+      <div
+        class="grid md:grid-cols-2 gap-4 flex-wrap mx-auto justify-center text-white text-center place-items-center pt-10 pb-20"
+      >
+        <div class="flex gap-4 my-auto items-center h-full" id="futureWorkoutCard">
+            <section class="container bg-gray-500 w-80 h-60 text-2xl">
               <h2>Previous Workouts</h2>
-          </section>
-          <section class = "Featured Workouts">
-            <div class="container bg-gray-500 w-80 h-60 text-2xl">
-              <h2>Featured Workouts</h2>
-          </section>
-          <div class="grid md:grid-cols-2 grid-flow-cols gap-4 flex-wrap mx-auto text-white text-center place-items-center pt-10 pb-20"
-            id="page-content">
-          </div>
+            </section>
         </div>
+        <div
+          class="grid md:grid-cols-2 grid-flow-cols gap-4 flex-wrap mx-auto text-white text-center place-items-center pt-10 pb-20"
+          id="page-content"
+        ></div>
+      </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="assets/js/script.js"></script>
