--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <body>
     <header class="sticky top-0 z-30">
       <nav
-        class="sticky tp-0 flex items-center justify-center flex-wrap bg-blue-600 p-6"
+        class="sticky tp-0 flex items-center justify-center flex-wrap bg-gray-200 p-6"
       >
-        <h1 class="text-left text-3xl font-bold text-white pr-10">
+      <div class="mb-2 sm:mb-0 flex flex-row">
+        <img class="h-10 w-10 self-center mx-auto" src="./assets/FF Icon.png" alt="fitness forecast icon">
+      </div>
+        <h1 class="text-left text-3xl font-bold text pl-10 pr-10">
           Fitness Forecast
         </h1>
         <ul cass="flex border-b">
@@ -30,10 +33,7 @@
             Weather
           </li>
           <li
-            class="bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold"
-            href="#"
-          >
-            Workouts
+           class="bg-blue-600 inline-block py-2 px-4 text-white hover:bg-blue-400 font-semibold"><a href="#mainWorkoutCard"></a>Workouts
           </li>
         </ul>
       </nav>
@@ -48,7 +48,7 @@
     <main class="container mx-auto px-40">
       <div class="flex mx-auto gap-4 justify-center">
         <div
-          class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap justify-center text-white text-center place-items-center pt-10 pb-20 mn-h-screen"
+          class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap justify-center text-white text-center place-items-center pt-10 pb-20"
         >
           <section class="Todays-Weather pt-10 pb-10">
             <div class="bg-blue-600 w-80 h-60 text-2xl" id="mainWeatherCard">
@@ -96,9 +96,9 @@
       <div
         class="grid md:grid-cols-2 gap-4 flex-wrap mx-auto justify-center text-white text-center place-items-center pt-10 pb-20"
       >
-        <div class="flex gap-4 my-auto items-center h-full" id="futureWorkoutCard">
-            <section class="container bg-gray-500 w-80 h-60 text-2xl">
-              <h2>Previous Workouts</h2>
+        <div class="flex gap-4 justify-center mx-auto items-center h-full">
+            <section class="container bg-gray-500 min-w-fit p-5 min-h-full text-2xl float-right" id="futureWorkoutCard">
+              <h2>Future Muscle Groups</h2>
             </section>
         </div>
         <div
