increased size of top two boxes and adding padding for verbiage

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       src="./assets/Running Outside Banner.png"
       id="top-of-page"
     />
-    <main class="container mx-auto px-40">
+    <main class="container mx-auto">
       <div class="flex mx-auto gap-4 justify-center">
         <div
-          class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap justify-center text-white text-center place-items-center pt-10 pb-20"
+          class="grid md:grid-cols-2 grid-flow-row flex-wrap justify-center gap-4 items-center text-white text-center"
         >
           <section class="Todays-Weather pt-10 pb-10">
-            <div class="bg-blue-600 w-80 h-60 text-2xl" id="mainWeatherCard">
+            <div class="bg-blue-600 w-120 h-80 text-2xl p-5" id="mainWeatherCard">
               <h2>Today's Weather</h2>
             </div>
           </section>
           <section class="Todays-Workout pt-10 pb-10">
-            <div class="bg-blue-600 w-80 h-60 text-2xl" id="mainWorkoutCard">
-              <h2>Today's Workouts</h2>
+            <div class="bg-blue-600 w-120 h-80 text-2xl p-5" id="mainWorkoutCard">
+              <h2 class="font-bold">Today's Workouts</h2>
             </div>
           </section>
         </div>
