Added styling using tailwind and adjusted alignment of boxes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       src="./assets/Running Outside Banner.png"
       id="top-of-page"
     />
-    <main class="container mx-auto px-40">
+    <main class="container mx-auto">
       <div class="flex mx-auto gap-4 justify-center">
         <div
           class="grid md:grid-cols-2 grid-flow-row gap-4 flex-wrap justify-center text-white text-center place-items-center pt-10 pb-20"
@@ -104,10 +104,10 @@
       >
         <div class="flex gap-4 justify-center mx-auto items-center h-full">
           <section
-            class="container bg-gray-500 min-w-fit p-5 min-h-full text-2xl float-right"
+            class="container bg-gray-500 min-w-fit p-5 mb-10 h-4/5 text-2xl"
             id="futureWorkoutCard"
           >
-            <h2>Future Muscle Groups</h2>
+            <h2 class="font-bold">Future Muscle Groups</h2>
           </section>
         </div>
         <div
